--- a/application/admin/view/templates/list.html
+++ b/application/admin/view/templates/list.html
@@ -152,7 +152,7 @@
 
 
     $(".shareImg").click(function () {
-        var img = '<img src="/'+$(this).attr('dataid')+'">'
+        var img = '<img src="'+$(this).attr('dataid')+'">'
         layer.open({
             type: 1,
             title: false,
