--- a/application/admin/view/templates/list.html
+++ b/application/admin/view/templates/list.html
@@ -5,6 +5,9 @@
 {/block}
 
 {block name="page-main"}
+<style>
+
+</style>
 <div class="row">
     <div class="col-lg-12">
         <div class="widget">
@@ -14,7 +17,7 @@
                 <span class="widget-caption">表单列表</span>
             </div>
             <div class="widget-body">
-                <div class="table-responsive">
+                <div class="table-responsive" style="height: 700px; overflow:scroll;">
                     <!-- <div class="alert alert-danger">
                         <p>使用word模板的表单无法编辑</p>
                     </div> -->
